# Engine-RUL-ML

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  pyproject.toml
data/: __init__.py  loader.py
data/schemas/: __init__.py  cmapss.py
docker/: Dockerfile.api  Dockerfile.mlflow  docker-compose.yml
evaluation/: metrics.py  splits.py
features/: lag.py  pipeline.py  rolling.py
labels/: binary.py  rul.py
mlops/: __init__.py  tracking.py
models/baseline/: logistic.py  threshold.py
models/classical/: rf_xgb.py
models/deep/: __init__.py  lstm.py  tcn.py
models/survival/: __init__.py  cox.py
monitoring/: drift.py  explainability.py  quality.py  robustness.py
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_policy_simulation.ipynb
policy/: __init__.py  notification.py
scripts/: __init__.py  benchmark.py  check_rmse.py  demo_results.py  drift.py  evaluate.py  plot_results.py  train.py
service/: api.py  benchmark.py  onnx_export.py  schemas.py
tests/: __init__.py  test_api.py  test_labels.py  test_metrics.py  test_notification.py  test_onnx.py  test_robustness.py  test_schema.py
